package NKnnService.NProtos;

message TEmbed {
    optional uint32 ExpectedDim = 1;
    repeated float Components = 2 [packed = true];
    optional string ModelFingerPrint = 3;
}

message TRequest {
    optional TEmbed Embed = 1;
    optional string TargetGroupingName = 2 [default = ""];
    optional string TargetGroupName = 3 [default = ""];


    optional uint32 ShardTopSize = 5;
    optional uint32 OwerwriteSearchSize = 6;

    optional bool NeedDocData = 7 [default = true]; //fully disable index lookup, result will contain only doc-id and weight
    optional bool NeedDocBody = 8 [default = true];
    optional bool FetchAllDocFields = 9 [default = true];

    repeated string DocFieldsFilters = 10;
    optional string RewriteGroupNameByGtaField = 11;

    // options for skip some fields in backed response
    optional bool SkipShardId = 12 [default = false];
    optional bool SkipRequestId = 13 [default = false];
    optional bool SkipTitle = 14 [default = false];
    optional bool SkipUrl = 15 [default = false];

    optional bool Base64EncodeFields = 16 [default = true];
}

message TMultiRequest {
    repeated TRequest Requests = 1;
}
